# jwmtools

./: .gitignore  AUTHORS.in  Makefile.am  NEWS  NEWS.in  autogen.sh  configure.ac  configure.sh
appmenugen/: Makefile.am  appmenugen.c
libonce/: Makefile.am
movemousecursor/: Makefile.am
s/: Makefile.am  s.c
scandirstr/: Makefile.am  scandirstr.c  scandirstr.h
slock/: Makefile.am  slock.c
sysmonitor/: Makefile.am
traybattery/: Makefile.am
traykeymap/: Makefile.am
traymonitor/: Makefile.am
trayscript/: Makefile.am
trayusermount/: Makefile.am
trayvolume/: Makefile.am
trayweather/: Makefile.am
xidletools/: Makefile.am  xidlerun.c
